<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".LoginActivity.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="Suspicious0dp">

        <ImageView
            android:id="@+id/imgBackforgotPassword"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:orientation="vertical"
            android:id="@+id/txtForgot">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="Forgot Password"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:text="Enter Email to Continue"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/inputEmailForgot"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/txtForgot"
            android:layout_marginLeft="48dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="48dp"
            android:background="@drawable/edit_text_forgot_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="20dp"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/email_adress"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnGenerate"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/inputEmailForgot"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="48dp"
            android:background="@drawable/button_forgot_background"
            android:fontFamily="@font/poppins_light"
            android:text="GENERATE"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/LoginInAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnGenerate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/want_to_login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/LoginInForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/LoginInAccount"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_light"
            android:text="@string/login_in"
            android:textColor="@color/black" />


    </RelativeLayout>

</RelativeLayout>